--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ spring.datasource.min-evictable-idle-time-millis=300000
 
 spring.http.multipart.max-file-size=5MB
 spring.http.multipart.max-request-size=5MB
+
+spring.main.lazy-initialization=true
+
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
