--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,14 @@ spring.mvc.view.suffix=.jsp
 
 welcome.message: Hello Mkyong
 
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/tvs?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/tvs?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=filia
 spring.datasource.name=tvs
 
-server.port = 8080
-
+server.port = 8089
+logging.file=/home/ubuntu/spring-boot-app.log
 
 # Pool
 
@@ -36,3 +35,6 @@ spring.http.multipart.max-request-size=5MB
 spring.main.lazy-initialization=true
 
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
